feat(row-permission): implement row-level permission management
- Add sys_row_permission entity, repository, command/query services and controller
- Update DataScopeQueryFilter to resolve visible usernames from sys_row_permission
- Add /sys/user/list and /sys/post/list endpoints for row permission UI dropdowns
- Support scope types: ALL, DEPT_ONLY, DEPT_AND_CHILDREN, POST, PERSONAL