@@ -2,15 +2,14 @@ package com.springddd.application.service.common;
 
 import com.springddd.domain.auth.AuthUser;
 import com.springddd.domain.auth.ReactiveSecurityUtils;
-import com.springddd.domain.role.DataScope;
 import com.springddd.infrastructure.persistence.entity.SysDeptEntity;
 import com.springddd.infrastructure.persistence.entity.SysPostEntity;
-import com.springddd.infrastructure.persistence.entity.SysRoleEntity;
-import com.springddd.infrastructure.persistence.entity.SysRoleMenuDataScopeEntity;
+import com.springddd.infrastructure.persistence.entity.SysRowPermissionEntity;
 import com.springddd.infrastructure.persistence.entity.SysUserEntity;
+import com.springddd.infrastructure.persistence.entity.SysRoleEntity;
 import com.springddd.infrastructure.persistence.entity.SysUserPostEntity;
-import com.springddd.infrastructure.persistence.r2dbc.SysRoleMenuDataScopeRepository;
 import com.springddd.infrastructure.persistence.r2dbc.SysRoleRepository;
+import com.springddd.infrastructure.persistence.r2dbc.SysRowPermissionRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.r2dbc.core.R2dbcEntityTemplate;
 import org.springframework.data.relational.core.query.Criteria;
@@ -28,143 +27,177 @@ public class DataScopeQueryFilter {
 
     private final R2dbcEntityTemplate r2dbcEntityTemplate;
     private final SysRoleRepository sysRoleRepository;
-    private final SysRoleMenuDataScopeRepository sysRoleMenuDataScopeRepository;
+    private final SysRowPermissionRepository sysRowPermissionRepository;
 
     public Mono<DataScopeResult> apply(Long menuId) {
         if (menuId == null) {
             return Mono.just(DataScopeResult.all());
         }
         return ReactiveSecurityUtils.getCurrentUser()
-                .flatMap(authUser -> resolveDataScope(menuId, authUser.getRoles())
-                        .flatMap(scope -> {
-                            if (scope == DataScope.ALL) {
-                                return Mono.just(DataScopeResult.all());
-                            }
-                            return resolveVisibleUsernames(scope, authUser)
-                                    .map(DataScopeResult::new);
-                        }));
+                .flatMap(authUser -> resolveDataScopeResult(menuId, authUser));
     }
 
-    private Mono<DataScope> resolveDataScope(Long menuId, List<String> roleCodes) {
+    private Mono<DataScopeResult> resolveDataScopeResult(Long menuId, AuthUser authUser) {
+        List<String> roleCodes = authUser.getRoles();
         if (roleCodes == null || roleCodes.isEmpty()) {
-            return Mono.just(DataScope.PERSONAL);
+            return Mono.just(new DataScopeResult(Set.of(authUser.getUsername())));
         }
-        // 使用 Repository 方法绕开 R2dbcEntityTemplate + Criteria 在 asyncer r2dbc-mysql 驱动下
-        // 对含参数 SELECT 误用 executeMany 的问题。
         return Flux.fromIterable(roleCodes)
                 .flatMap(sysRoleRepository::findByRoleCodeAndDeleteStatusFalse)
+                .map(SysRoleEntity::getId)
                 .collectList()
-                .flatMap(roles -> {
-                    if (roles.isEmpty()) {
-                        return Mono.just(DataScope.PERSONAL);
+                .flatMap(roleIds -> {
+                    if (roleIds.isEmpty()) {
+                        return Mono.just(Set.of(authUser.getUsername()));
                     }
-                    List<Long> roleIds = roles.stream().map(SysRoleEntity::getId).distinct().toList();
                     return Flux.fromIterable(roleIds)
-                            .flatMap(roleId -> sysRoleMenuDataScopeRepository.findByRoleIdAndMenuIdAndDeleteStatusFalse(roleId, menuId))
+                            .flatMap(roleId -> sysRowPermissionRepository.findByRoleIdAndMenuIdAndDeleteStatusFalse(roleId, menuId))
                             .collectList()
-                            .map(configs -> {
-                                if (configs.isEmpty()) {
-                                    // fallback to role default data scope
-                                    return roles.stream()
-                                            .map(SysRoleEntity::getDataScope)
-                                            .filter(Objects::nonNull)
-                                            .map(DataScope::of)
-                                            .filter(Objects::nonNull)
-                                            .min(DataScopeQueryFilter::compareScope)
-                                            .orElse(DataScope.ALL);
+                            .flatMap(rules -> {
+                                if (rules.isEmpty()) {
+                                    return Mono.just(Set.of(authUser.getUsername()));
                                 }
-                                return configs.stream()
-                                        .map(SysRoleMenuDataScopeEntity::getDataScope)
-                                        .map(DataScope::of)
-                                        .filter(Objects::nonNull)
-                                        .min(DataScopeQueryFilter::compareScope)
-                                        .orElse(DataScope.ALL);
+                                boolean hasAll = rules.stream().anyMatch(rule -> rule.getScopeType() != null && rule.getScopeType() == 0);
+                                if (hasAll) {
+                                    return Mono.just(new HashSet<String>());
+                                }
+                                return resolveVisibleUsernames(rules, authUser);
                             });
+                })
+                .map(DataScopeResult::new);
+    }
+
+    private Mono<Set<String>> resolveVisibleUsernames(List<SysRowPermissionEntity> rules, AuthUser authUser) {
+        Set<String> usernames = new HashSet<>();
+        Set<Long> deptOnlyIds = new HashSet<>();
+        Set<Long> deptAndChildIds = new HashSet<>();
+        Set<Long> postIds = new HashSet<>();
+        Set<Long> userIds = new HashSet<>();
+
+        for (SysRowPermissionEntity rule : rules) {
+            Integer scopeType = rule.getScopeType();
+            Long targetId = rule.getTargetId();
+            if (scopeType == null) {
+                continue;
+            }
+            switch (scopeType) {
+                case 1 -> {
+                    if (targetId != null) {
+                        deptOnlyIds.add(targetId);
+                    }
+                }
+                case 2 -> {
+                    if (targetId != null) {
+                        deptAndChildIds.add(targetId);
+                    }
+                }
+                case 3 -> {
+                    if (targetId != null) {
+                        postIds.add(targetId);
+                    }
+                }
+                case 4 -> {
+                    if (targetId != null) {
+                        userIds.add(targetId);
+                    } else {
+                        usernames.add(authUser.getUsername());
+                    }
+                }
+                default -> {
+                    // ignore
+                }
+            }
+        }
+
+        Mono<Set<String>> deptUsersMono = resolveDeptUsernames(deptOnlyIds, deptAndChildIds);
+        Mono<Set<String>> postUsersMono = resolvePostUsernames(postIds);
+        Mono<Set<String>> userUsersMono = resolveUserUsernames(userIds);
+
+        return Mono.zip(deptUsersMono, postUsersMono, userUsersMono)
+                .map(tuple -> {
+                    Set<String> result = new HashSet<>(usernames);
+                    result.addAll(tuple.getT1());
+                    result.addAll(tuple.getT2());
+                    result.addAll(tuple.getT3());
+                    if (result.isEmpty()) {
+                        result.add(authUser.getUsername());
+                    }
+                    return result;
                 });
     }
 
-    private Mono<Set<String>> resolveVisibleUsernames(DataScope scope, AuthUser authUser) {
-        String username = authUser.getUsername();
-        return switch (scope) {
-            case ALL -> Mono.just(Collections.emptySet());
-            case PERSONAL -> Mono.just(Set.of(username));
-            case DEPT_ONLY, DEPT_AND_CHILDREN -> resolveDeptUsernames(scope, username);
-            case POST -> resolvePostUsernames(username);
-        };
+    private Mono<Set<String>> resolveDeptUsernames(Set<Long> deptOnlyIds, Set<Long> deptAndChildIds) {
+        if (deptOnlyIds.isEmpty() && deptAndChildIds.isEmpty()) {
+            return Mono.just(Collections.emptySet());
+        }
+        return r2dbcEntityTemplate.select(SysDeptEntity.class)
+                .matching(Query.query(Criteria.where("delete_status").is(false)))
+                .all()
+                .collectList()
+                .flatMap(allDepts -> {
+                    Set<Long> targetDeptIds = new HashSet<>(deptOnlyIds);
+                    for (Long parentId : deptAndChildIds) {
+                        targetDeptIds.add(parentId);
+                        targetDeptIds.addAll(findChildrenDeptIds(parentId, allDepts));
+                    }
+                    if (targetDeptIds.isEmpty()) {
+                        return Mono.just(Collections.emptySet());
+                    }
+                    return Flux.fromIterable(targetDeptIds)
+                            .flatMap(deptId -> r2dbcEntityTemplate.select(SysUserEntity.class)
+                                    .matching(Query.query(Criteria.where("dept_id").is(deptId).and("delete_status").is(false)))
+                                    .all())
+                            .map(SysUserEntity::getUsername)
+                            .collect(Collectors.toSet());
+                });
     }
 
-    private Mono<Set<String>> resolveDeptUsernames(DataScope scope, String username) {
-        return r2dbcEntityTemplate.select(SysUserEntity.class)
-                .matching(Query.query(Criteria.where("username").is(username).and("deleteStatus").is(false)))
-                .first()
-                .flatMap(user -> {
-                    Long deptId = user.getDeptId();
-                    if (deptId == null) {
-                        return Mono.just(Set.of(username));
+    private Mono<Set<String>> resolvePostUsernames(Set<Long> postIds) {
+        if (postIds.isEmpty()) {
+            return Mono.just(Collections.emptySet());
+        }
+        return r2dbcEntityTemplate.select(SysPostEntity.class)
+                .matching(Query.query(Criteria.where("delete_status").is(false)))
+                .all()
+                .collectList()
+                .flatMap(allPosts -> {
+                    Set<Long> targetPostIds = new HashSet<>(postIds);
+                    for (Long parentId : postIds) {
+                        targetPostIds.addAll(findChildrenPostIds(parentId, allPosts));
                     }
-                    return r2dbcEntityTemplate.select(SysDeptEntity.class)
-                            .matching(Query.query(Criteria.where("deleteStatus").is(false)))
-                            .all()
-                            .collectList()
-                            .flatMap(depts -> {
-                                Set<Long> deptIds = new HashSet<>();
-                                deptIds.add(deptId);
-                                if (scope == DataScope.DEPT_AND_CHILDREN) {
-                                    deptIds.addAll(findChildrenDeptIds(deptId, depts));
+                    if (targetPostIds.isEmpty()) {
+                        return Mono.just(Collections.emptySet());
+                    }
+                    return Flux.fromIterable(targetPostIds)
+                            .flatMap(postId -> r2dbcEntityTemplate.select(SysUserPostEntity.class)
+                                    .matching(Query.query(Criteria.where("post_id").is(postId).and("delete_status").is(false)))
+                                    .all())
+                            .map(SysUserPostEntity::getUserId)
+                            .collect(Collectors.toSet())
+                            .flatMap(userIds -> {
+                                if (userIds.isEmpty()) {
+                                    return Mono.just(Collections.emptySet());
                                 }
-                                return Flux.fromIterable(deptIds)
-                                        .flatMap(id -> r2dbcEntityTemplate.select(SysUserEntity.class)
-                                                .matching(Query.query(Criteria.where("deptId").is(id).and("deleteStatus").is(false)))
+                                return Flux.fromIterable(userIds)
+                                        .flatMap(userId -> r2dbcEntityTemplate.select(SysUserEntity.class)
+                                                .matching(Query.query(Criteria.where("id").is(userId).and("delete_status").is(false)))
                                                 .all())
                                         .map(SysUserEntity::getUsername)
                                         .collect(Collectors.toSet());
                             });
-                })
-                .switchIfEmpty(Mono.just(Set.of(username)));
+                });
     }
 
-    private Mono<Set<String>> resolvePostUsernames(String username) {
-        return r2dbcEntityTemplate.select(SysUserEntity.class)
-                .matching(Query.query(Criteria.where("username").is(username).and("deleteStatus").is(false)))
-                .first()
-                .flatMap(user -> r2dbcEntityTemplate.select(SysUserPostEntity.class)
-                        .matching(Query.query(Criteria.where("userId").is(user.getId()).and("deleteStatus").is(false)))
-                        .all()
-                        .map(SysUserPostEntity::getPostId)
-                        .collectList()
-                        .flatMap(postIds -> {
-                            if (postIds.isEmpty()) {
-                                return Mono.just(Set.of(username));
-                            }
-                            return r2dbcEntityTemplate.select(SysPostEntity.class)
-                                    .matching(Query.query(Criteria.where("deleteStatus").is(false)))
-                                    .all()
-                                    .collectList()
-                                    .flatMap(posts -> {
-                                        Set<Long> allPostIds = new HashSet<>(postIds);
-                                        for (Long postId : postIds) {
-                                            allPostIds.addAll(findChildrenPostIds(postId, posts));
-                                        }
-                                        return Flux.fromIterable(allPostIds)
-                                                .flatMap(postId -> r2dbcEntityTemplate.select(SysUserPostEntity.class)
-                                                        .matching(Query.query(Criteria.where("postId").is(postId).and("deleteStatus").is(false)))
-                                                        .all())
-                                                .map(SysUserPostEntity::getUserId)
-                                                .collect(Collectors.toSet());
-                                    })
-                                    .flatMap(userIds -> {
-                                        if (userIds.isEmpty()) {
-                                            return Mono.just(Set.of(username));
-                                        }
-                                        return Flux.fromIterable(userIds)
-                                                .flatMap(userId -> r2dbcEntityTemplate.select(SysUserEntity.class)
-                                                        .matching(Query.query(Criteria.where("id").is(userId).and("deleteStatus").is(false)))
-                                                        .all())
-                                                .map(SysUserEntity::getUsername)
-                                                .collect(Collectors.toSet());
-                                    });
-                        }))
-                .switchIfEmpty(Mono.just(Set.of(username)));
+    private Mono<Set<String>> resolveUserUsernames(Set<Long> userIds) {
+        if (userIds.isEmpty()) {
+            return Mono.just(Collections.emptySet());
+        }
+        return Flux.fromIterable(userIds)
+                .flatMap(userId -> r2dbcEntityTemplate.select(SysUserEntity.class)
+                        .matching(Query.query(Criteria.where("id").is(userId).and("delete_status").is(false)))
+                        .all())
+                .map(SysUserEntity::getUsername)
+                .collect(Collectors.toSet());
     }
 
     private Set<Long> findChildrenDeptIds(Long parentId, List<SysDeptEntity> allDepts) {
@@ -204,9 +237,5 @@ public class DataScopeQueryFilter {
             criteria = criteria.or(field).is(iterator.next());
         }
         return criteria;
-    }
-
-    private static int compareScope(DataScope a, DataScope b) {
-        return Integer.compare(a.value(), b.value());
     }
 }
